<!-- res/layout/digital_dash.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/hamburgerButtonWraper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <!-- back button -->
        <ImageButton
            android:id="@+id/backArrow"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:background="?android:attr/selectableItemBackground"
            android:baselineAlignBottom="false"
            android:src="@drawable/home_icon"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/back_arrow_to_mian_page" />

        <!-- hamburger button -->
        <ImageButton
            android:id="@+id/hamburgerButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="40dp"
            android:background="?android:attr/selectableItemBackground"
            android:baselineAlignBottom="false"
            android:src="@drawable/hamburger"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/hamburger_button_to_activate_and_deactivate_gauges" />

    </RelativeLayout>



    <LinearLayout
        android:id="@+id/horizontalBarContanier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hamburgerButtonWraper"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/coolantTemp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:padding="16dp">

            <ImageView
                android:id="@+id/coolantLogo"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/coolant_logo_white"
                android:contentDescription="@string/coolant_logo" />

            <com.example.racestats.CustomProgressBar
                android:id="@+id/coolantTemperatureGauge"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="780dp"
                android:layout_height="40dp"
                android:layout_marginStart="24dp"
                android:layout_toEndOf="@id/coolantLogo"
                android:max="126"
                android:progress="0" />

            <TextView
                android:id="@+id/coolantTemperatureTextOverlay"
                android:layout_width="106dp"
                android:layout_height="46dp"
                android:layout_alignTop="@id/coolantTemperatureGauge"
                android:layout_alignBottom="@id/coolantTemperatureGauge"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="0dp"
                android:layout_toEndOf="@id/coolantTemperatureGauge"
                android:gravity="center"
                android:text="@string/_0_c"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/IntakeTemp"
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:padding="16dp">

            <ImageView
                android:id="@+id/intakeLogo"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/airintake"
                android:contentDescription="@string/intake_logo" />

            <com.example.racestats.CustomProgressBar
                android:id="@+id/intakeTemperatureGauge"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="780dp"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_toEndOf="@id/intakeLogo"
                android:max="80"
                android:progress="0" />

            <TextView
                android:id="@+id/intakeTemperatureTextOverlay"
                android:layout_width="106dp"
                android:layout_height="46dp"
                android:layout_alignTop="@id/intakeTemperatureGauge"
                android:layout_alignBottom="@id/intakeTemperatureGauge"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="-4dp"
                android:layout_toEndOf="@id/intakeTemperatureGauge"
                android:gravity="center"
                android:text="@string/_0_c"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp" />

        </RelativeLayout>

        <!--        <RelativeLayout-->
        <!--            android:id="@+id/afr"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="100dp"-->
        <!--            android:layout_marginTop="15dp"-->
        <!--            android:gravity="center"-->
        <!--            android:padding="16dp">-->

        <!--            <ImageView-->
        <!--                android:id="@+id/afrLogo"-->
        <!--                android:layout_width="55dp"-->
        <!--                android:layout_height="55dp"-->
        <!--                android:layout_alignParentStart="true"-->
        <!--                android:layout_marginStart="12dp"-->
        <!--                android:layout_marginEnd="8dp"-->
        <!--                android:src="@drawable/afr" />-->

        <!--            <com.example.racestats.CustomProgressBar-->
        <!--                android:id="@+id/afrGauge"-->
        <!--                style="?android:attr/progressBarStyleHorizontal"-->
        <!--                android:layout_width="780dp"-->
        <!--                android:layout_height="40dp"-->
        <!--                android:layout_marginStart="32dp"-->
        <!--                android:layout_toEndOf="@+id/afrLogo"-->
        <!--                android:max="126"-->
        <!--                android:progress="0" />-->

        <!--            <TextView-->
        <!--                android:id="@+id/afrTextOverlay"-->
        <!--                android:layout_width="106dp"-->
        <!--                android:layout_height="46dp"-->
        <!--                android:layout_alignTop="@id/afrGauge"-->
        <!--                android:layout_alignBottom="@id/afrGauge"-->
        <!--                android:layout_marginStart="20dp"-->
        <!--                android:layout_marginBottom="0dp"-->
        <!--                android:layout_toEndOf="@id/afrGauge"-->
        <!--                android:gravity="center"-->
        <!--                android:text="0"-->
        <!--                android:textAlignment="center"-->
        <!--                android:textColor="@color/white"-->
        <!--                android:textSize="34sp" />-->

        <!--        </RelativeLayout>-->

        <!--        <RelativeLayout-->
        <!--            android:id="@+id/fuelTrim"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="100dp"-->
        <!--            android:layout_marginTop="15dp"-->
        <!--            android:gravity="center"-->
        <!--            android:padding="16dp">-->

        <!--            <ImageView-->
        <!--                android:id="@+id/fuelTrimLogo"-->
        <!--                android:layout_width="55dp"-->
        <!--                android:layout_height="55dp"-->
        <!--                android:layout_alignParentStart="true"-->
        <!--                android:layout_marginStart="12dp"-->
        <!--                android:layout_marginEnd="8dp"-->
        <!--                android:src="@drawable/fueltrim" />-->

        <!--            <com.example.racestats.CustomProgressBar-->
        <!--                android:id="@+id/fuelTrimGauge"-->
        <!--                style="?android:attr/progressBarStyleHorizontal"-->
        <!--                android:layout_width="780dp"-->
        <!--                android:layout_height="40dp"-->
        <!--                android:layout_marginStart="24dp"-->
        <!--                android:layout_toEndOf="@id/fuelTrimLogo"-->
        <!--                android:max="100"-->
        <!--                android:progress="0" />-->

        <!--            <TextView-->
        <!--                android:id="@+id/fuelTrimTextOverlay"-->
        <!--                android:layout_width="106dp"-->
        <!--                android:layout_height="46dp"-->
        <!--                android:layout_alignTop="@id/fuelTrimGauge"-->
        <!--                android:layout_alignBottom="@id/fuelTrimGauge"-->
        <!--                android:layout_marginStart="20dp"-->
        <!--                android:layout_marginBottom="0dp"-->
        <!--                android:layout_toEndOf="@id/fuelTrimGauge"-->
        <!--                android:gravity="center"-->
        <!--                android:text="0"-->
        <!--                android:textAlignment="center"-->
        <!--                android:textColor="@color/white"-->
        <!--                android:textSize="34sp" />-->

        <!--        </RelativeLayout>-->

    </LinearLayout>

    <!--    <com.example.racestats.DraggableGaugeView-->
    <!--        android:id="@+id/rpmGauge"-->
    <!--        android:layout_width="350dp"-->
    <!--        android:layout_height="63dp"-->
    <!--        android:text="Engine RPM: "-->
    <!--        android:textSize="18sp"-->
    <!--        android:visibility="gone" />-->

    <!--    <com.example.racestats.DraggableGaugeView-->
    <!--        android:id="@+id/coolantTempGauge"-->
    <!--        android:layout_width="350dp"-->
    <!--        android:layout_height="63dp"-->
    <!--        android:text="Coolant Temperature C°: "-->
    <!--        android:textSize="18sp"-->
    <!--        android:visibility="gone" />-->


    <!-- Add TextView to display coolantTemperature -->

    <LinearLayout
        android:id="@+id/popoutMenu"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:background="#121312"
        android:orientation="vertical"
        android:visibility="gone">

        <!-- x button to close pop out -->
        <ImageButton
            android:id="@+id/x_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="0dp"
            android:background="?android:attr/selectableItemBackground"
            android:baselineAlignBottom="false"
            android:contentDescription="@string/close_button"
            android:src="@drawable/xwhite"
            android:visibility="gone"
            tools:ignore="SpeakableTextPresentCheck" />


        <!-- Gauge options in pop-out menu -->
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/availabe_data"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gaugeOptionCoolant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:onClick="onGaugeOptionClick"
            android:padding="12dp"
            android:text="@string/coolant_temp_active"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/gaugeOptionIntakeTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:onClick="onGaugeOptionClick"
            android:padding="10dp"
            android:text="@string/intake_temp_active"
            android:textColor="@color/white"
            android:textSize="22sp" />


        <Button
            android:id="@+id/addCustomGauge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:padding="12dp"
            android:text="@string/add_custom_gauge" />

        <!-- Add more gauge options as needed -->
    </LinearLayout>
</RelativeLayout>
